<resources>
    <string name="app_name">My Cocktails</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="add_your_first_cocktail">Add your first cocktail here</string>
    <string name="edit">Edit</string>
    <string name="recipe">Recipe:</string>
    <string name="title">Title</string>
    <string name="add_title">Add title</string>
    <string name="optional_field">Optional field</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient">Ingredient</string>
    <string name="add">Add</string>
</resources>