<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/text_add"
    app:cardCornerRadius="40dp"
    tools:context=".editing_screen.CreateIngredientFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_ingredient"
            style="@style/name_info_cocktails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_ingredient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_ET"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/input_field_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_ingredient" />

        <TextView
            android:id="@+id/text_title_TV"
            style="@style/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:text="@string/ingredient"
            app:layout_constraintBottom_toTopOf="@+id/title_ET"
            app:layout_constraintStart_toStartOf="@+id/title_ET"
            app:layout_constraintTop_toTopOf="@+id/title_ET" />

        <TextView
            android:id="@+id/add_title_TV"
            style="@style/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:text="@string/add_title"
            app:layout_constraintStart_toStartOf="@+id/title_ET"
            app:layout_constraintTop_toBottomOf="@+id/title_ET" />

        <Button
            android:id="@+id/save"
            style="@style/Widget.MaterialComponents.Button.BottomStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_margin="15dp"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_title_TV" />

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.BottomStyleCancel"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/save"
            app:layout_constraintStart_toStartOf="@+id/save"
            app:layout_constraintTop_toBottomOf="@+id/save" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>